--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "preview:server": "npm run build:server && npm run node:server",
     "node:server": "cross-env NODE_OPTIONS=\"--import=./server/register.js\" node ./server/index.ts",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
-    "test:eslint": "./node_modules/.bin/eslint ./",
-    "lint:ts": "eslint \"**/*.{ts,tsx}\"",
-    "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
-    "check:types": "tsc --noEmit"
+    "check:ts": "eslint",
+    "check:ts:fix": "eslint --fix",
+    "check:types": "tsc --noEmit",
+    "check:prettier": "prettier . --check",
+    "check:prettier:fix": "prettier . --write"
   },
   "type": "module",
   "author": "Vladimir Shestakov boolive@yandex.ru",
@@ -30,6 +31,7 @@
     "cross-env": "^7.0.3",
     "dotenv-parse-variables": "^2.0.0",
     "express": "^4.21.0",
+    "globals": "^15.9.0",
     "history": "^5.3.0",
     "html-dom-parser": "^5.0.10",
     "js-base64": "^3.7.7",
@@ -56,9 +58,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.0",
     "@types/accept-language-parser": "^1.5.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/dotenv-parse-variables": "^2.0.3",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/http-proxy": "^1.17.15",
     "@types/jest": "^29.5.13",
@@ -72,8 +76,6 @@
     "@types/react-router": "^5.1.20",
     "@types/replacestream": "^4.0.4",
     "@types/uniqid": "^5.3.4",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
-    "@typescript-eslint/parser": "^8.6.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
@@ -85,6 +87,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.6.0",
     "vite": "^5.4.7",
     "vite-plugin-checker": "^0.8.0",
     "vite-plugin-eslint": "^1.8.1",
