--- a/packages/package.json
+++ b/packages/package.json
@@ -26,18 +26,23 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "vite": "^5.4.7",
-    "tslib": "^2.7.0"
+    "tslib": "^2.7.0",
+    "vite": "^5.4.7"
   },
   "dependencies": {
     "accept-language-parser": "^1.5.0",
     "axios": "^1.7.7",
+    "html-escaper": "^3.0.3",
     "http-proxy": "^1.18.1",
+    "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "lodash.get": "^4.4.2",
     "merge-change": "^1.8.1",
     "node-gzip": "^1.1.2",
+    "node-html-parser": "^6.1.13",
+    "npm": "^10.9.0",
     "qs": "^6.13.0",
+    "string-template": "^1.0.0",
     "uniqid": "^5.4.0",
     "urlpattern-polyfill": "^10.0.0",
     "zipson": "^0.2.12",
@@ -47,12 +52,14 @@
     "@types/accept-language-parser": "^1.5.6",
     "@types/dotenv-parse-variables": "^2.0.3",
     "@types/express": "^4.17.21",
+    "@types/html-escaper": "^3.0.2",
     "@types/http-proxy": "^1.17.15",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash.get": "^4.4.9",
     "@types/node-gzip": "^1.1.3",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@types/string-template": "^1.0.6",
     "@types/uniqid": "^5.3.4"
   }
 }
