--- a/src/package.json
+++ b/src/package.json
@@ -15,7 +15,6 @@
     "merge-change": "^1.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet-async": "^2.0.5",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
     "shallowequal": "^1.1.0",
@@ -25,7 +24,6 @@
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-helmet": "^6.1.11"
+    "@types/react-dom": "^18.3.0"
   }
 }
