--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Vladimir Shestakov boolive@yandex.ru",
   "license": "ISC",
   "scripts": {
-    "start": "vite serve",
+    "start": "vite",
     "build": "vite build",
     "preview": "npm run build && vite preview",
     "start:server": "cross-env NODE_ENV=development npm run node:server",
@@ -25,9 +25,7 @@
     "build:npm": "cross-env VITE_CJS_TRACE=true vite build -c vite.npm.config.ts",
     "publish": "cd ./dist/packages && npm publish"
   },
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
     "@eslint/js": "^9.11.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
