--- a/create-react-solution/template/package.json
+++ b/create-react-solution/template/package.json
@@ -24,7 +24,7 @@
     "./src"
   ],
   "dependencies": {
-    "react-solution": "4.2.0",
+    "react-solution": "^4.2.3",
     "merge-change": "^1.8.1"
   },
   "devDependencies": {
