--- a/react-solution/package.json
+++ b/react-solution/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-solution",
-  "version": "4.2.3",
+  "version": "4.2.5",
   "description": "React Solution",
   "type": "module",
   "main": "index.cjs",
@@ -40,6 +40,7 @@
     "node-gzip": "^1.1.2",
     "node-html-parser": "^6.1.13",
     "qs": "^6.13.0",
+    "shallowequal": "^1.1.0",
     "uniqid": "^5.4.0",
     "urlpattern-polyfill": "^10.0.0",
     "zipson": "^0.2.12",
