--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "build:react-solution": "cross-env VITE_CJS_TRACE=true vite build -c vite.react-solution.config.ts",
     "publish:react-solution": "cd ./dist/react-solution && npm publish",
     "publish:create-react-solution": "cd ./create-react-solution && npm publish",
-    "deploy:all": "npm run build:react-solution && npm run publish:react-solution && npm run publish:create-react-solution"
+    "deploy:all": "npm run build:react-solution && npm run publish:react-solution && npm run publish:create-react-solution",
+    "build:doc": "typedoc"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.0",
@@ -50,6 +51,8 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tslib": "^2.7.0",
+    "typedoc": "^0.27.6",
+    "typedoc-plugin-markdown": "^4.4.1",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.6.0",
     "vite": "^5.4.7",
