--- a/create-react-solution/template/tsconfig.json
+++ b/create-react-solution/template/tsconfig.json
@@ -1,11 +1,5 @@
 {
-  "include": [
-    "typings/**/*",
-    "src/**/*",
-    "server/**/*",
-    "vite.config.ts",
-    "server.config.ts"
-  ],
+  "include": ["typings/**/*", "src/**/*", "server/**/*", "vite.config.ts", "server.config.ts"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "baseUrl": "./",
