--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "check:types": "tsc --noEmit",
     "check:prettier": "prettier . --check",
     "check:prettier:fix": "prettier . --write",
+    "build:doc": "typedoc",
     "build:react-solution": "cross-env VITE_CJS_TRACE=true vite build -c vite.react-solution.config.ts",
     "publish:react-solution": "cd ./dist/react-solution && npm publish",
     "publish:create-react-solution": "cd ./create-react-solution && npm publish",
-    "deploy:all": "npm run build:react-solution && npm run publish:react-solution && npm run publish:create-react-solution",
-    "build:doc": "typedoc"
+    "deploy:all": "npm run build:react-solution && npm run publish:react-solution && npm run publish:create-react-solution"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.0",
